--- a/index.html
+++ b/index.html
@@ -43,27 +43,36 @@
 
     <script>
         async function fetchScoreboard() {
-            const sheetURL = "https://docs.google.com/spreadsheets/d/e/https://docs.google.com/spreadsheets/d/e/2PACX-1vQB0ax7-0AFsa83279SgFdhlSk0EMnAwApTys9uKSSPkjefTmlfbLA-7Tm7kzGwMi9dPFV0mTJwrSH9/pub?gid=50383406&single=true&output=csv/pub?output=csv";
-            const response = await fetch(sheetURL);
-            const data = await response.text();
+           const sheetURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQB0ax7-0AFsa83279SgFdhlSk0EMnAwApTys9uKSSPkjefTmlfbLA-7Tm7kzGwMi9dPFV0mTJwrSH9/pub?gid=50383406&single=true&output=csv";
 
-            const rows = data.split("\n").map(row => row.split(","));
-            const tbody = document.querySelector("#scoreboard tbody");
-            tbody.innerHTML = ""; // Clear previous data
+async function fetchScoreboard() {
+    try {
+        const response = await fetch(sheetURL);
+        if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
+        
+        const data = await response.text();
+        const rows = data.split("\n").map(row => row.split(","));
+        
+        const tbody = document.querySelector("#scoreboard tbody");
+        tbody.innerHTML = "";
 
-            rows.forEach(row => {
-                let tr = document.createElement("tr");
-                row.forEach(cell => {
-                    let td = document.createElement("td");
-                    td.textContent = cell;
-                    tr.appendChild(td);
-                });
-                tbody.appendChild(tr);
+        rows.forEach(row => {
+            let tr = document.createElement("tr");
+            row.forEach(cell => {
+                let td = document.createElement("td");
+                td.textContent = cell;
+                tr.appendChild(td);
             });
-        }
+            tbody.appendChild(tr);
+        });
+    } catch (error) {
+        console.error("Error fetching data:", error);
+    }
+}
 
-        fetchScoreboard();
-        setInterval(fetchScoreboard, 60000); // Update every 60 seconds
+fetchScoreboard();
+setInterval(fetchScoreboard, 60000); // Refresh every 60 seconds
+
     </script>
 </body>
 </html>
