--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <script>
         async function fetchScoreboard() {
-           const sheetURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQB0ax7-0AFsa83279SgFdhlSk0EMnAwApTys9uKSSPkjefTmlfbLA-7Tm7kzGwMi9dPFV0mTJwrSH9/pub?gid=50383406&single=true&output=csv";
+           const sheetURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQB0ax7-0AFsa83279SgFdhlSk0EMnAwApTys9uKSSPkjefTmlfbLA-7Tm7kzGwMi9dPFV0mTJwrSH9/pub?output=csv";
 
 async function fetchScoreboard() {
     try {
