--- a/index.html
+++ b/index.html
@@ -42,37 +42,37 @@
     </table>
 
     <script>
+        const sheetURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQB0ax7-0AFsa83279SgFdhlSk0EMnAwApTys9uKSSPkjefTmlfbLA-7Tm7kzGwMi9dPFV0mTJwrSH9/pub?output=csv";
+
         async function fetchScoreboard() {
-           const sheetURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQB0ax7-0AFsa83279SgFdhlSk0EMnAwApTys9uKSSPkjefTmlfbLA-7Tm7kzGwMi9dPFV0mTJwrSH9/pub?output=csv";
+            try {
+                const response = await fetch(sheetURL);
+                if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
 
-async function fetchScoreboard() {
-    try {
-        const response = await fetch(sheetURL);
-        if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
-        
-        const data = await response.text();
-        const rows = data.split("\n").map(row => row.split(","));
-        
-        const tbody = document.querySelector("#scoreboard tbody");
-        tbody.innerHTML = "";
+                const data = await response.text();
+                const rows = data.split("\n").slice(1); // Skip the header row
 
-        rows.forEach(row => {
-            let tr = document.createElement("tr");
-            row.forEach(cell => {
-                let td = document.createElement("td");
-                td.textContent = cell;
-                tr.appendChild(td);
-            });
-            tbody.appendChild(tr);
-        });
-    } catch (error) {
-        console.error("Error fetching data:", error);
-    }
-}
+                const tbody = document.querySelector("#scoreboard tbody");
+                tbody.innerHTML = "";
 
-fetchScoreboard();
-setInterval(fetchScoreboard, 60000); // Refresh every 60 seconds
+                rows.forEach(row => {
+                    const [team, score] = row.split(",");
+                    if (team && score) { // Ensure the row is not empty
+                        let tr = document.createElement("tr");
+                        tr.innerHTML = `
+                            <td>${team.trim()}</td>
+                            <td>${score.trim()}</td>
+                        `;
+                        tbody.appendChild(tr);
+                    }
+                });
+            } catch (error) {
+                console.error("Error fetching data:", error);
+            }
+        }
 
+        fetchScoreboard();
+        setInterval(fetchScoreboard, 60000); // Refresh every 60 seconds
     </script>
 </body>
 </html>
