--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </table>
 
     <script>
-        const sheetURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQB0ax7-0AFsa83279SgFdhlSk0EMnAwApTys9uKSSPkjefTmlfbLA-7Tm7kzGwMi9dPFV0mTJwrSH9/pub?output=csv";
+        const sheetURL = "https://gist.githubusercontent.com/netj/8836201/raw/6f9306ad21398ea43cba4f7d537619d0e07d5ae3/iris.csv";
 
         async function fetchScoreboard() {
             try {
