--- a/index.html
+++ b/index.html
@@ -5,41 +5,120 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Disc Golf Fantasy Scoreboard</title>
     <style>
+        /* General Styles */
         body {
-            font-family: Arial, sans-serif;
-            background-color: #222;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #1e3c72, #2a5298);
             color: white;
-            text-align: center;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
         }
+
         h1 {
             color: #FFD700;
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
+
+        /* Table Styles */
         table {
-            width: 50%;
-            margin: auto;
+            width: 80%;
+            max-width: 800px;
+            margin: 20px auto;
             border-collapse: collapse;
-            background: #333;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
         }
+
         th, td {
-            padding: 10px;
-            border: 1px solid #555;
+            padding: 15px;
+            text-align: center;
         }
+
         th {
-            background-color: #444;
+            background-color: rgba(255, 255, 255, 0.2);
+            font-size: 1.2rem;
+            text-transform: uppercase;
+        }
+
+        td {
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+
+        tr:hover {
+            background-color: rgba(255, 255, 255, 0.2);
+        }
+
+        /* Responsive Design */
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 2rem;
+            }
+
+            table {
+                width: 95%;
+            }
+
+            th, td {
+                padding: 10px;
+            }
+        }
+
+        /* Animations */
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        table {
+            animation: fadeIn 1s ease-in-out;
+        }
+
+        /* Refresh Button */
+        .refresh-button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 1rem;
+            color: white;
+            background: #FFD700;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background 0.3s ease;
+        }
+
+        .refresh-button:hover {
+            background: #e6b800;
         }
     </style>
 </head>
 <body>
-    <h1>Disc Golf Fantasy League Scoreboard</h1>
-    <table id="scoreboard">
-        <thead>
-            <tr>
-                <th>Team</th>
-                <th>Score</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+    <div>
+        <h1>Disc Golf Fantasy League Scoreboard</h1>
+        <table id="scoreboard">
+            <thead>
+                <tr>
+                    <th>Team</th>
+                    <th>Score</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+        <button class="refresh-button" onclick="fetchScoreboard()">Refresh Scores</button>
+    </div>
 
     <script>
         const sheetURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQB0ax7-0AFsa83279SgFdhlSk0EMnAwApTys9uKSSPkjefTmlfbLA-7Tm7kzGwMi9dPFV0mTJwrSH9/pub?output=csv";
